Java 17 and library version bumps